# General-Number-Field-Sieve

./: AFBGen.h  CMakeLists.txt  Chineese remainder.cpp  ChineeseRemainder.h  GNFC3.mw  GNFC4.mw  GNFS.cpp  GNFS.h  Initialization.cpp  LinearDependency.cpp  QCFBGen.h  README.md  RFBGen.h  ShanksTonelli.h  Sieving.cpp  computeY.h  degreeInit.h  delta.h  eval.h  fieldsFinder.h  fillExpMatrix.h  fillExpSpMatrix.h  gauss.h  initialization.h  lanczos.h  mInit.h  main.cpp  matrix.txt  mulDiag.h  norm.h  plot.py  pollardLogarithm.mw  polyInit.h  randComb.h  sieving.h  solving.h
Debug/: General_Number_Field_Sieve  gnfs
Debug/project/: project.amplxeproj
